Rename images and add forloop

--- a/src/pages/blog.njk
+++ b/src/pages/blog.njk
@@ -25,9 +25,10 @@ layout: "layouts/base.html"
 				<span class="text-black text-h-5 block pt-4 xl:pt-7">Het laatste nieuws rondom fillers, botox en PMU</span>
 			</div>
 			<div class="pt-7 md:pt-12 lg:pt-16 xl:pt-20 grid grid-cols-1 md:grid-cols-2 xl:grid-cols-3 gap-7 md:gap-4">
+				{% for item in range(0,12) %}
 				<div class="bg-white rounded-[25px] px-[18px] md:px-5 pt-[18px] pb-[18px] md:pb-5">
 					<span>
-						<img src="/assets/img/services-01.jpg" class="rounded-[25px] h-[225px] md:h-[287px] w-full object-cover" alt="botox image">
+						<img src="/assets/img/services-{{ loop.index }}.jpg" class="rounded-[25px] h-[225px] md:h-[287px] w-full object-cover" alt="botox image">
 					</span>
 					<div class="pt-4 md:pt-6">
 						<h3 class="text-xl/[26px] xl:text-2xl/[32px] font-bold pb-4">Nieuwsbericht #1</h3>
@@ -37,138 +38,8 @@ layout: "layouts/base.html"
 						</div>
 					</div>
 				</div>
-				<div class="bg-white rounded-[25px] px-[18px] md:px-5 pt-[18px] pb-[18px] md:pb-5">
-					<span>
-						<img src="/assets/img/services-06.jpg" class="rounded-[25px] h-[225px] md:h-[287px] w-full object-cover" alt="botox image">
-					</span>
-					<div class="pt-4 md:pt-6">
-						<h3 class="text-xl/[26px] xl:text-2xl/[32px] font-bold pb-4">Nieuwsbericht #1</h3>
-						<p class="text-h-5 lg:min-h-[96px] lg:line-clamp-3">Een kleine ingreep met voor een mooie, frisse uitstraling. Vele enthousiaste klanten gingen je voor met onze FillerHouse lip fillers.</p>
-						<div class="mt-5">
-							<a href="/" class="!bg-[#e5055b] btn btn-primary md:!px-10">Lees verder</a>
-						</div>
-					</div>
-				</div>
-				<div class="bg-white rounded-[25px] px-[18px] md:px-5 pt-[18px] pb-[18px] md:pb-5">
-					<span>
-						<img src="/assets/img/services-15.jpg" class="rounded-[25px] h-[225px] md:h-[287px] w-full object-cover" alt="botox image">
-					</span>
-					<div class="pt-4 md:pt-6">
-						<h3 class="text-xl/[26px] xl:text-2xl/[32px] font-bold pb-4">Nieuwsbericht #1</h3>
-						<p class="text-h-5 lg:min-h-[96px] lg:line-clamp-3">Een kleine ingreep met voor een mooie, frisse uitstraling. Vele enthousiaste klanten gingen je voor met onze FillerHouse lip fillers.</p>
-						<div class="mt-5">
-							<a href="/" class="!bg-[#e5055b] btn btn-primary md:!px-10">Lees verder</a>
-						</div>
-					</div>
-				</div>
-				<div class="bg-white rounded-[25px] px-[18px] md:px-5 pt-[18px] pb-[18px] md:pb-5">
-					<span>
-						<img src="/assets/img/services-01.jpg" class="rounded-[25px] h-[225px] md:h-[287px] w-full object-cover" alt="botox image">
-					</span>
-					<div class="pt-4 md:pt-6">
-						<h3 class="text-xl/[26px] xl:text-2xl/[32px] font-bold pb-4">Nieuwsbericht #1</h3>
-						<p class="text-h-5 lg:min-h-[96px] lg:line-clamp-3">Een kleine ingreep met voor een mooie, frisse uitstraling. Vele enthousiaste klanten gingen je voor met onze FillerHouse lip fillers.</p>
-						<div class="mt-5">
-							<a href="/" class="!bg-[#e5055b] btn btn-primary md:!px-10">Lees verder</a>
-						</div>
-					</div>
-				</div>
-				<div class="bg-white rounded-[25px] px-[18px] md:px-5 pt-[18px] pb-[18px] md:pb-5">
-					<span>
-						<img src="/assets/img/services-06.jpg" class="rounded-[25px] h-[225px] md:h-[287px] w-full object-cover" alt="botox image">
-					</span>
-					<div class="pt-4 md:pt-6">
-						<h3 class="text-xl/[26px] xl:text-2xl/[32px] font-bold pb-4">Nieuwsbericht #1</h3>
-						<p class="text-h-5 lg:min-h-[96px] lg:line-clamp-3">Een kleine ingreep met voor een mooie, frisse uitstraling. Vele enthousiaste klanten gingen je voor met onze FillerHouse lip fillers.</p>
-						<div class="mt-5">
-							<a href="/" class="!bg-[#e5055b] btn btn-primary md:!px-10">Lees verder</a>
-						</div>
-					</div>
-				</div>
-				<div class="bg-white rounded-[25px] px-[18px] md:px-5 pt-[18px] pb-[18px] md:pb-5">
-					<span>
-						<img src="/assets/img/services-15.jpg" class="rounded-[25px] h-[225px] md:h-[287px] w-full object-cover" alt="botox image">
-					</span>
-					<div class="pt-4 md:pt-6">
-						<h3 class="text-xl/[26px] xl:text-2xl/[32px] font-bold pb-4">Nieuwsbericht #1</h3>
-						<p class="text-h-5 lg:min-h-[96px] lg:line-clamp-3">Een kleine ingreep met voor een mooie, frisse uitstraling. Vele enthousiaste klanten gingen je voor met onze FillerHouse lip fillers.</p>
-						<div class="mt-5">
-							<a href="/" class="!bg-[#e5055b] btn btn-primary md:!px-10">Lees verder</a>
-						</div>
-					</div>
-				</div>
-				<div class="bg-white rounded-[25px] px-[18px] md:px-5 pt-[18px] pb-[18px] md:pb-5">
-					<span>
-						<img src="/assets/img/services-01.jpg" class="rounded-[25px] h-[225px] md:h-[287px] w-full object-cover" alt="botox image">
-					</span>
-					<div class="pt-4 md:pt-6">
-						<h3 class="text-xl/[26px] xl:text-2xl/[32px] font-bold pb-4">Nieuwsbericht #1</h3>
-						<p class="text-h-5 lg:min-h-[96px] lg:line-clamp-3">Een kleine ingreep met voor een mooie, frisse uitstraling. Vele enthousiaste klanten gingen je voor met onze FillerHouse lip fillers.</p>
-						<div class="mt-5">
-							<a href="/" class="!bg-[#e5055b] btn btn-primary md:!px-10">Lees verder</a>
-						</div>
-					</div>
-				</div>
-				<div class="bg-white rounded-[25px] px-[18px] md:px-5 pt-[18px] pb-[18px] md:pb-5">
-					<span>
-						<img src="/assets/img/services-06.jpg" class="rounded-[25px] h-[225px] md:h-[287px] w-full object-cover" alt="botox image">
-					</span>
-					<div class="pt-4 md:pt-6">
-						<h3 class="text-xl/[26px] xl:text-2xl/[32px] font-bold pb-4">Nieuwsbericht #1</h3>
-						<p class="text-h-5 lg:min-h-[96px] lg:line-clamp-3">Een kleine ingreep met voor een mooie, frisse uitstraling. Vele enthousiaste klanten gingen je voor met onze FillerHouse lip fillers.</p>
-						<div class="mt-5">
-							<a href="/" class="!bg-[#e5055b] btn btn-primary md:!px-10">Lees verder</a>
-						</div>
-					</div>
-				</div>
-				<div class="bg-white rounded-[25px] px-[18px] md:px-5 pt-[18px] pb-[18px] md:pb-5">
-					<span>
-						<img src="/assets/img/services-15.jpg" class="rounded-[25px] h-[225px] md:h-[287px] w-full object-cover" alt="botox image">
-					</span>
-					<div class="pt-4 md:pt-6">
-						<h3 class="text-xl/[26px] xl:text-2xl/[32px] font-bold pb-4">Nieuwsbericht #1</h3>
-						<p class="text-h-5 lg:min-h-[96px] lg:line-clamp-3">Een kleine ingreep met voor een mooie, frisse uitstraling. Vele enthousiaste klanten gingen je voor met onze FillerHouse lip fillers.</p>
-						<div class="mt-5">
-							<a href="/" class="!bg-[#e5055b] btn btn-primary md:!px-10">Lees verder</a>
-						</div>
-					</div>
-				</div>
-				<div class="bg-white rounded-[25px] px-[18px] md:px-5 pt-[18px] pb-[18px] md:pb-5">
-					<span>
-						<img src="/assets/img/services-01.jpg" class="rounded-[25px] h-[225px] md:h-[287px] w-full object-cover" alt="botox image">
-					</span>
-					<div class="pt-4 md:pt-6">
-						<h3 class="text-xl/[26px] xl:text-2xl/[32px] font-bold pb-4">Nieuwsbericht #1</h3>
-						<p class="text-h-5 lg:min-h-[96px] lg:line-clamp-3">Een kleine ingreep met voor een mooie, frisse uitstraling. Vele enthousiaste klanten gingen je voor met onze FillerHouse lip fillers.</p>
-						<div class="mt-5">
-							<a href="/" class="!bg-[#e5055b] btn btn-primary md:!px-10">Lees verder</a>
-						</div>
-					</div>
-				</div>
-				<div class="bg-white rounded-[25px] px-[18px] md:px-5 pt-[18px] pb-[18px] md:pb-5">
-					<span>
-						<img src="/assets/img/services-06.jpg" class="rounded-[25px] h-[225px] md:h-[287px] w-full object-cover" alt="botox image">
-					</span>
-					<div class="pt-4 md:pt-6">
-						<h3 class="text-xl/[26px] xl:text-2xl/[32px] font-bold pb-4">Nieuwsbericht #1</h3>
-						<p class="text-h-5 lg:min-h-[96px] lg:line-clamp-3">Een kleine ingreep met voor een mooie, frisse uitstraling. Vele enthousiaste klanten gingen je voor met onze FillerHouse lip fillers.</p>
-						<div class="mt-5">
-							<a href="/" class="!bg-[#e5055b] btn btn-primary md:!px-10">Lees verder</a>
-						</div>
-					</div>
-				</div>
-				<div class="bg-white rounded-[25px] px-[18px] md:px-5 pt-[18px] pb-[18px] md:pb-5">
-					<span>
-						<img src="/assets/img/services-15.jpg" class="rounded-[25px] h-[225px] md:h-[287px] w-full object-cover" alt="botox image">
-					</span>
-					<div class="pt-4 md:pt-6">
-						<h3 class="text-xl/[26px] xl:text-2xl/[32px] font-bold pb-4">Nieuwsbericht #1</h3>
-						<p class="text-h-5 lg:min-h-[96px] lg:line-clamp-3">Een kleine ingreep met voor een mooie, frisse uitstraling. Vele enthousiaste klanten gingen je voor met onze FillerHouse lip fillers.</p>
-						<div class="mt-5">
-							<a href="/" class="!bg-[#e5055b] btn btn-primary md:!px-10">Lees verder</a>
-						</div>
-					</div>
-				</div>
+				{% endfor %}
+
 			</div>
 			<div class="flex items-center justify-between gap-5 pt-7">
 				<span class="block h-[70px]">
