--- a/src/pages/home.njk
+++ b/src/pages/home.njk
@@ -506,7 +506,7 @@ layout: "layouts/base.html"
 		</h1>
 		<p class="text-h-5 pt-4 text-center text-black">Het laatste nieuws rondom fillers, botox en PMU</p>
 		<div class="">
-			<div class="flex w-full gap-2 overflow-auto whitespace-nowrap pr-4 pt-7 md:gap-4 xl:grid xl:grid-cols-4">
+			<div class="flex w-full gap-2 overflow-auto whitespace-nowrap pr-4 xl:pr-0 pt-7 md:gap-4 xl:grid xl:grid-cols-4">
 				<div
 					class="flex w-[96%] shrink-0 flex-col whitespace-normal rounded-[25px] bg-white p-3.5 pb-[27px] sm:w-5/6 md:w-[45%] md:rounded-[47px] md:px-[21px] md:py-[22px] lg:w-2/5 xl:w-full"
 				>
