--- a/src/pages/home.njk
+++ b/src/pages/home.njk
@@ -508,7 +508,7 @@ layout: "layouts/base.html"
 		<div class="">
 			<div class="flex w-full gap-2 overflow-auto whitespace-nowrap pr-4 xl:pr-0 pt-7 md:gap-4 xl:grid xl:grid-cols-4">
 				<div
-					class="flex w-[96%] shrink-0 flex-col whitespace-normal rounded-[25px] bg-white p-3.5 pb-[27px] sm:w-5/6 md:w-[45%] md:rounded-[47px] md:px-[21px] md:py-[22px] lg:w-2/5 xl:w-full"
+					class="flex w-[96%] sm:w-5/6 md:w-[45%] lg:w-2/5 xl:w-full shrink-0 flex-col whitespace-normal rounded-[25px] bg-white p-3.5 pb-[27px] md:rounded-[47px] md:px-[21px] md:py-[22px]"
 				>
 					<span>
 						<img
@@ -814,34 +814,34 @@ layout: "layouts/base.html"
 					</ul>
 				</div>
 				<form class="pt-7 md:pt-11">
-					<div class="pb-[22px]">
+					<div class="pb-[18px] lg:pb-[22px]">
 						<span class="flex items-center text-lg/[25px] text-[#7a7a7a] md:mb-2">
 							<span class="mr-2 inline-block rounded-full bg-pink p-1 md:p-1.5"></span>Naam:</span
 						>
 						<input
 							type="text"
-							class="focus:border-#d4d4d4 ring-#d4d4d4 ring-offset-#d4d4d4 block w-full rounded-[15px] border-0 bg-white px-8 py-[22px] text-lg/[25px] text-black md:rounded-[40px]"
+							class="focus:border-#d4d4d4 ring-#d4d4d4 ring-offset-#d4d4d4 block w-full rounded-[15px] lg:border-0 bg-white px-8 py-[22px] text-lg/[25px] text-black lg:rounded-[40px] border border-solid border-[#cccccc]"
 						/>
 					</div>
-					<div class="pb-[22px]">
+					<div class="pb-[18px] lg:pb-[22px]">
 						<span class="flex items-center text-lg/[25px] text-[#7a7a7a] md:mb-2">
 							<span class="mr-2 inline-block rounded-full bg-pink p-1 md:p-1.5"></span>E-mailadres:</span
 						>
 						<input
 							type="text"
-							class="focus:border-#d4d4d4 ring-#d4d4d4 ring-offset-#d4d4d4 block w-full rounded-[15px] border-0 bg-white px-8 py-[22px] text-lg/[25px] text-black md:rounded-[40px]"
+							class="focus:border-#d4d4d4 ring-#d4d4d4 ring-offset-#d4d4d4 block w-full rounded-[15px] lg:border-0 bg-white px-8 py-[22px] text-lg/[25px] text-black lg:rounded-[40px] border border-solid border-[#cccccc]"
 						/>
 					</div>
-					<div class="pb-[22px]">
+					<div class="pb-[18px] lg:pb-[22px]">
 						<span class="flex items-center text-lg/[25px] text-[#7a7a7a] md:mb-2">
 							<span class="mr-2 inline-block rounded-full bg-pink p-1 md:p-1.5"></span>Telefoonnummer:</span
 						>
 						<input
 							type="text"
-							class="focus:border-#d4d4d4 ring-#d4d4d4 ring-offset-#d4d4d4 block w-full rounded-[15px] border-0 bg-white px-8 py-[22px] text-lg/[25px] text-black md:rounded-[40px]"
+							class="focus:border-#d4d4d4 ring-#d4d4d4 ring-offset-#d4d4d4 block w-full rounded-[15px] lg:border-0 bg-white px-8 py-[22px] text-lg/[25px] text-black lg:rounded-[40px] border border-solid border-[#cccccc]"
 						/>
 					</div>
-					<div class="pb-[19px]">
+					<div class="pb-[11px] lg:pb-[19px]">
 						<span class="flex items-center text-lg/[25px] text-[#7a7a7a] md:mb-2">
 							<span class="mr-2 inline-block rounded-full bg-pink p-1 md:p-1.5"></span>Bericht:</span
 						>
@@ -850,7 +850,7 @@ layout: "layouts/base.html"
 							id=""
 							cols="30"
 							rows="3"
-							class="focus:border-#d4d4d4 ring-#d4d4d4 ring-offset-#d4d4d4 block w-full rounded-[15px] border-0 bg-white px-8 py-[22px] text-lg/[25px] text-black md:rounded-[40px]"
+							class="focus:border-#d4d4d4 ring-#d4d4d4 ring-offset-#d4d4d4 block w-full rounded-[15px] lg:border-0 bg-white px-8 py-[22px] text-lg/[25px] text-black lg:rounded-[40px] border border-solid border-[#cccccc]"
 						></textarea>
 					</div>
 					<div class="flex flex-col-reverse gap-7 md:flex-row md:gap-12">
