--- a/src/pages/home.njk
+++ b/src/pages/home.njk
@@ -12,7 +12,7 @@ layout: "layouts/base.html"
 		class="absolute inset-0 z-0 h-screen w-screen object-cover"
 	>
 		<source
-			src="/assets/img/bg-hero-video.mp4"
+			src="/assets/img/bg-hero-video-small.mp4"
 			type="video/mp4"
 		/>
 	</video>
@@ -76,7 +76,7 @@ layout: "layouts/base.html"
 					<span class="block w-1/2 pt-6 lg:w-full">
 						<img
 							src="/assets/img/services-3.jpg"
-							class="effect-3d-image lg:h-[239px] 2xl:h-[314px] h-[210px] w-full rounded-[15px] object-cover sm:h-[239px] md:rounded-[50px]"
+							class="effect-3d-image h-[210px] w-full rounded-[15px] object-cover sm:h-[239px] md:rounded-[50px] lg:h-[239px] 2xl:h-[314px]"
 							alt="image"
 						/>
 					</span>
@@ -492,7 +492,7 @@ layout: "layouts/base.html"
 	</div>
 </div>
 
-<div class="relative overflow-hidden bg-off-white">
+<div class="effect-top-curve relative overflow-hidden bg-off-white pt-16">
 	<div class="absolute -bottom-3 left-0 z-20 w-[125%] sm:w-auto md:-bottom-6">
 		<img
 			src="/assets/img/section-shape-pink.svg"
@@ -506,9 +506,9 @@ layout: "layouts/base.html"
 		</h1>
 		<p class="text-h-5 pt-4 text-center text-black">Het laatste nieuws rondom fillers, botox en PMU</p>
 		<div class="">
-			<div class="flex w-full gap-2 overflow-auto whitespace-nowrap pr-4 xl:pr-0 pt-7 md:gap-4 xl:grid xl:grid-cols-4">
+			<div class="flex w-full gap-2 overflow-auto whitespace-nowrap pr-4 pt-7 md:gap-4 xl:grid xl:grid-cols-4 xl:pr-0">
 				<div
-					class="flex w-[96%] sm:w-5/6 md:w-[45%] lg:w-2/5 xl:w-full shrink-0 flex-col whitespace-normal rounded-[25px] bg-white p-3.5 pb-[27px] md:rounded-[47px] md:px-[21px] md:py-[22px]"
+					class="flex w-[96%] shrink-0 flex-col whitespace-normal rounded-[25px] bg-white p-3.5 pb-[27px] sm:w-5/6 md:w-[45%] md:rounded-[47px] md:px-[21px] md:py-[22px] lg:w-2/5 xl:w-full"
 				>
 					<span>
 						<img
@@ -820,7 +820,7 @@ layout: "layouts/base.html"
 						>
 						<input
 							type="text"
-							class="focus:border-#d4d4d4 ring-#d4d4d4 ring-offset-#d4d4d4 block w-full rounded-[15px] lg:border-0 bg-white px-8 py-[22px] text-lg/[25px] text-black lg:rounded-[40px] border border-solid border-[#cccccc]"
+							class="focus:border-#d4d4d4 ring-#d4d4d4 ring-offset-#d4d4d4 block w-full rounded-[15px] border border-solid border-[#cccccc] bg-white px-8 py-[22px] text-lg/[25px] text-black lg:rounded-[40px] lg:border-0"
 						/>
 					</div>
 					<div class="pb-[18px] lg:pb-[22px]">
@@ -829,7 +829,7 @@ layout: "layouts/base.html"
 						>
 						<input
 							type="text"
-							class="focus:border-#d4d4d4 ring-#d4d4d4 ring-offset-#d4d4d4 block w-full rounded-[15px] lg:border-0 bg-white px-8 py-[22px] text-lg/[25px] text-black lg:rounded-[40px] border border-solid border-[#cccccc]"
+							class="focus:border-#d4d4d4 ring-#d4d4d4 ring-offset-#d4d4d4 block w-full rounded-[15px] border border-solid border-[#cccccc] bg-white px-8 py-[22px] text-lg/[25px] text-black lg:rounded-[40px] lg:border-0"
 						/>
 					</div>
 					<div class="pb-[18px] lg:pb-[22px]">
@@ -838,7 +838,7 @@ layout: "layouts/base.html"
 						>
 						<input
 							type="text"
-							class="focus:border-#d4d4d4 ring-#d4d4d4 ring-offset-#d4d4d4 block w-full rounded-[15px] lg:border-0 bg-white px-8 py-[22px] text-lg/[25px] text-black lg:rounded-[40px] border border-solid border-[#cccccc]"
+							class="focus:border-#d4d4d4 ring-#d4d4d4 ring-offset-#d4d4d4 block w-full rounded-[15px] border border-solid border-[#cccccc] bg-white px-8 py-[22px] text-lg/[25px] text-black lg:rounded-[40px] lg:border-0"
 						/>
 					</div>
 					<div class="pb-[11px] lg:pb-[19px]">
@@ -850,7 +850,7 @@ layout: "layouts/base.html"
 							id=""
 							cols="30"
 							rows="3"
-							class="focus:border-#d4d4d4 ring-#d4d4d4 ring-offset-#d4d4d4 block w-full rounded-[15px] lg:border-0 bg-white px-8 py-[22px] text-lg/[25px] text-black lg:rounded-[40px] border border-solid border-[#cccccc]"
+							class="focus:border-#d4d4d4 ring-#d4d4d4 ring-offset-#d4d4d4 block w-full rounded-[15px] border border-solid border-[#cccccc] bg-white px-8 py-[22px] text-lg/[25px] text-black lg:rounded-[40px] lg:border-0"
 						></textarea>
 					</div>
 					<div class="flex flex-col-reverse gap-7 md:flex-row md:gap-12">
