--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -1,4 +1,5 @@
 @import "fonts.css";
+@import "swiper/css/bundle";
 
 @tailwind base;
 @tailwind components;
@@ -11,6 +12,39 @@
 
 	[x-cloak] {
 		@apply !hidden;
+	}
+}
+
+.swiper {
+	.swiper-pagination-bullet {
+		background: none;
+		margin: 0 !important;
+		@apply inline-flex h-6 w-6 items-center justify-center  rounded-full border border-solid border-[#efefef] !opacity-100 !important;
+
+		.bullet-inside {
+			@apply flex h-3 w-3 items-center rounded-full border-2 border-solid border-pink bg-white;
+		}
+
+		.bullet-active {
+			@apply hidden;
+		}
+
+		&.swiper-pagination-bullet-active {
+			@apply inline-block h-8 w-8 rounded-none border-0 border-transparent !important;
+
+			.bullet-inside {
+				@apply hidden;
+			}
+
+			.bullet-active {
+				@apply block h-8 w-8;
+			}
+		}
+	}
+
+	.swiper-horizontal > .swiper-pagination-bullets,
+	.swiper-pagination-bullets.swiper-pagination-horizontal {
+		@apply bottom-0 text-left;
 	}
 }
 
