--- a/src/pages/home.njk
+++ b/src/pages/home.njk
@@ -427,7 +427,7 @@ layout: "layouts/base.html"
 	</div>
 </div>
 
-<div class="container pb-28 pt-10 lg:pb-40">
+<div class="container pb-24 pt-10 lg:pb-40">
 	<div class="flex flex-col xl:flex-row xl:gap-24">
 		<div class="flex w-full gap-3 md:gap-8 lg:gap-[51px] xl:w-[55%] 2xl:w-1/2">
 			<span class="w-1/2">
@@ -460,39 +460,61 @@ layout: "layouts/base.html"
 					/>
 				</span>
 			</span>
-			<span class="-mt-3 block text-[98px] text-lime lg:mt-0">“</span>
-			<p class="text-h-5 relative -mt-18 text-black lg:-mt-16">
-				Claudia is echt enorm goed in haar werk, ze neemt echt de tijd voor je. Ik ben heel erg tevreden met mijn lippen
-				en ga ook nergens anders meer. Elke keer verbaas ik me er weer over dat ze het nog mooier heeft gemaakt dan de
-				keer ervoor. Daarnaast is het ook altijd enorm gezellig, het is een waar uitje geworden.
-			</p>
-			<span class="block pt-6 text-lg/[24px] font-bold text-pink lg:pt-8">
-				Romy
-				<span class="block font-normal text-black/70"> Google reviews </span>
-			</span>
-			<div class="flex items-center gap-5 pt-10">
-				<span class="inline-block">
-					<img
-						src="/assets/img/kiss-dot.png"
-						class="h-8"
-						alt=""
-					/>
-				</span>
-				<span class="inline-block rounded-full border border-solid border-[#efefef] p-1.5">
-					<span class="flex items-center rounded-full border-2 border-solid border-pink bg-white p-1"> </span>
-				</span>
-				<span class="inline-block rounded-full border border-solid border-[#efefef] p-1.5">
-					<span class="flex items-center rounded-full border-2 border-solid border-pink bg-white p-1"> </span>
-				</span>
-				<span class="inline-block rounded-full border border-solid border-[#efefef] p-1.5">
-					<span class="flex items-center rounded-full border-2 border-solid border-pink bg-white p-1"> </span>
-				</span>
+			<span class="-mb-12 mt-8 block text-[98px] leading-none text-lime">“</span>
+			<div class="swiper pb-20">
+				<div class="swiper-wrapper">
+					<div class="swiper-slide">
+						<p class="text-h-5 relative text-black">
+							Claudia is echt enorm goed in haar werk, ze neemt echt de tijd voor je. Ik ben heel erg tevreden met mijn
+							lippen en ga ook nergens anders meer. Elke keer verbaas ik me er weer over dat ze het nog mooier heeft
+							gemaakt dan de keer ervoor. Daarnaast is het ook altijd enorm gezellig, het is een waar uitje geworden.
+						</p>
+						<span class="block pt-6 text-lg/[24px] font-bold text-pink lg:pt-8">
+							Romy
+							<span class="block font-normal text-black/70"> Google reviews </span>
+						</span>
+					</div>
+					<div class="swiper-slide">
+						<p class="text-h-5 relative text-black">
+							Claudia is echt enorm goed in haar werk, ze neemt echt de tijd voor je. Ik ben heel erg tevreden met mijn
+							lippen en ga ook nergens anders meer. Elke keer verbaas ik me er weer over dat ze het nog mooier heeft
+							gemaakt dan de keer ervoor. Daarnaast is het ook altijd enorm gezellig, het is een waar uitje geworden.
+						</p>
+						<span class="block pt-6 text-lg/[24px] font-bold text-pink lg:pt-8">
+							Romy
+							<span class="block font-normal text-black/70"> Google reviews </span>
+						</span>
+					</div>
+					<div class="swiper-slide">
+						<p class="text-h-5 relative text-black">
+							Claudia is echt enorm goed in haar werk, ze neemt echt de tijd voor je. Ik ben heel erg tevreden met mijn
+							lippen en ga ook nergens anders meer. Elke keer verbaas ik me er weer over dat ze het nog mooier heeft
+							gemaakt dan de keer ervoor. Daarnaast is het ook altijd enorm gezellig, het is een waar uitje geworden.
+						</p>
+						<span class="block pt-6 text-lg/[24px] font-bold text-pink lg:pt-8">
+							Romy
+							<span class="block font-normal text-black/70"> Google reviews </span>
+						</span>
+					</div>
+					<div class="swiper-slide">
+						<p class="text-h-5 relative text-black">
+							Claudia is echt enorm goed in haar werk, ze neemt echt de tijd voor je. Ik ben heel erg tevreden met mijn
+							lippen en ga ook nergens anders meer. Elke keer verbaas ik me er weer over dat ze het nog mooier heeft
+							gemaakt dan de keer ervoor. Daarnaast is het ook altijd enorm gezellig, het is een waar uitje geworden.
+						</p>
+						<span class="block pt-6 text-lg/[24px] font-bold text-pink lg:pt-8">
+							Romy
+							<span class="block font-normal text-black/70"> Google reviews </span>
+						</span>
+					</div>
+				</div>
+				<div class="swiper-pagination flex items-center gap-5"></div>
 			</div>
 		</div>
 	</div>
 </div>
 
-<div class="effect-top-curve relative overflow-hidden bg-off-white pt-16">
+<div class="md:effect-top-curve relative overflow-hidden bg-off-white md:pt-16">
 	<div class="absolute -bottom-3 left-0 z-20 w-[125%] sm:w-auto md:-bottom-6">
 		<img
 			src="/assets/img/section-shape-pink.svg"
