Add filler house page first draft

--- a/src/pages/price.njk
+++ b/src/pages/price.njk
@@ -27,7 +27,7 @@ layout: "layouts/base.html"
 					<span class="text-black text-xl md:text-2xl font-bold block pl-3.5 md:pl-3">PDO Draadlift</span>
 				</div>
 				<div class="flex items-center">
-					<a href="/" class="text-[#c1c1c1] text-lg/[42px] underline hidden md:block pr-[18px]">Bekijk behandelingen</a>
+					<a href="/" class="text-[#c1c1c1] text-lg underline hidden md:block pr-[18px]">Bekijk behandelingen</a>
 					<span class="shrink-0">
 						<svg xmlns="http://www.w3.org/2000/svg" fill="#f70766" class="h-[18px]" viewBox="0 0 512 512"><path d="M233.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L256 338.7 86.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z"/></svg>
 					</span>
@@ -50,7 +50,7 @@ layout: "layouts/base.html"
 					</thead>
 					<tbody>
 							<tr class="bg-white border-b border-[#f4f4f4] ">
-									<th scope="row" class="px-[30px] py-2 font-normal text-gray-900 whitespace-nowrap dark:text-white">
+									<th scope="row" class="px-[30px] py-2 font-normal  whitespace-nowrap dark:text-white">
 										Frons,voorhoofd & kraaienpootjes (3 zones)
 									</th>
 									<td class="px-[30px] py-2">
@@ -58,7 +58,7 @@ layout: "layouts/base.html"
 									</td>
 									<td class="pl-[30px] py-2">
 										<div class="flex items-center justify-end">
-											<a href="/" class="text-[#c1c1c1] text-lg/[42px] underline hidden md:block pr-px">Bekijk behandelingen</a>
+											<a href="/" class="text-[#c1c1c1] text-lg underline hidden md:block pr-px">Bekijk behandelingen</a>
 											<span class="shrink-0">
 												<svg xmlns="http://www.w3.org/2000/svg" fill="#f70766" class="h-[18px] transform -rotate-90" viewBox="0 0 512 512"><path d="M233.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L256 338.7 86.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z"/></svg>
 											</span>
@@ -66,7 +66,7 @@ layout: "layouts/base.html"
 									</td>
 							</tr>
 							<tr class="bg-off-white border-b border-[#f4f4f4] ">
-								<th scope="row" class="px-[30px] py-2 font-normal text-gray-900 whitespace-nowrap dark:text-white">
+								<th scope="row" class="px-[30px] py-2 font-normal  whitespace-nowrap dark:text-white">
 									Frons & voorhoofd (2 zones)
 								</th>
 								<td class="px-[30px] py-2">
@@ -74,7 +74,7 @@ layout: "layouts/base.html"
 								</td>
 								<td class="pl-[30px] py-2">
 									<div class="flex items-center justify-end">
-										<a href="/" class="text-[#c1c1c1] text-lg/[42px] underline hidden md:block pr-px">Bekijk behandelingen</a>
+										<a href="/" class="text-[#c1c1c1] text-lg underline hidden md:block pr-px">Bekijk behandelingen</a>
 										<span class="shrink-0">
 											<svg xmlns="http://www.w3.org/2000/svg" fill="#f70766" class="h-[18px] transform -rotate-90" viewBox="0 0 512 512"><path d="M233.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L256 338.7 86.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z"/></svg>
 										</span>
@@ -82,7 +82,7 @@ layout: "layouts/base.html"
 								</td>
 						</tr>
 						<tr class="bg-white">
-							<th scope="row" class="px-[30px] py-2 font-normal text-gray-900 whitespace-nowrap dark:text-white">
+							<th scope="row" class="px-[30px] py-2 font-normal  whitespace-nowrap dark:text-white">
 								Frons
 							</th>
 							<td class="px-[30px] py-2">
@@ -90,7 +90,7 @@ layout: "layouts/base.html"
 							</td>
 							<td class="pl-[30px] py-2">
 								<div class="flex items-center justify-end">
-									<a href="/" class="text-[#c1c1c1] text-lg/[42px] underline hidden md:block pr-px">Bekijk behandelingen</a>
+									<a href="/" class="text-[#c1c1c1] text-lg underline hidden md:block pr-px">Bekijk behandelingen</a>
 									<span class="shrink-0">
 										<svg xmlns="http://www.w3.org/2000/svg" fill="#f70766" class="h-[18px] transform -rotate-90" viewBox="0 0 512 512"><path d="M233.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L256 338.7 86.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z"/></svg>
 									</span>
@@ -115,7 +115,7 @@ layout: "layouts/base.html"
 					<tbody>
 							<tr class="bg-white border-b border-[#f4f4f4]">
 									<th scope="row" class="md:px-[30px] py-2 font-normal">
-										<span class="text-gray-900 block text-lg">Frons,voorhoofd & kraaienpootjes (3 zones)</span>
+										<span class=" block text-lg">Frons,voorhoofd & kraaienpootjes (3 zones)</span>
 										<div class="flex items-center">
 											<a href="/" class="text-[#c1c1c1] text-lg underline pr-px">Bekijk behandelingen</a>
 											<span class="shrink-0">
@@ -129,7 +129,7 @@ layout: "layouts/base.html"
 							</tr>
 							<tr class="bg-off-white border-b border-[#f4f4f4]">
 								<th scope="row" class="md:px-[30px] py-2 font-normal">
-									<span class="text-gray-900 block text-lg">Frons & voorhoofd (2 zones)</span>
+									<span class=" block text-lg">Frons & voorhoofd (2 zones)</span>
 									<div class="flex items-center">
 										<a href="/" class="text-[#c1c1c1] text-lg underline pr-px">Bekijk behandelingen</a>
 										<span class="shrink-0">
@@ -143,7 +143,7 @@ layout: "layouts/base.html"
 						</tr>
 						<tr class="bg-white">
 							<th scope="row" class="md:px-[30px] py-2 font-normal">
-								<span class="text-gray-900 block text-lg">Frons</span>
+								<span class=" block text-lg">Frons</span>
 								<div class="flex items-center">
 									<a href="/" class="text-[#c1c1c1] text-lg underline pr-px">Bekijk behandelingen</a>
 									<span class="shrink-0">
@@ -167,7 +167,7 @@ layout: "layouts/base.html"
 				<span class="text-black text-xl md:text-2xl font-bold block pl-3.5 md:pl-3">Lipo injections</span>
 			</div>
 			<div class="flex items-center">
-				<a href="/" class="text-[#c1c1c1] text-lg/[42px] underline hidden md:block pr-[18px]">Bekijk behandelingen</a>
+				<a href="/" class="text-[#c1c1c1] text-lg underline hidden md:block pr-[18px]">Bekijk behandelingen</a>
 				<span class="shrink-0">
 					<svg xmlns="http://www.w3.org/2000/svg" fill="#f70766" class="h-[18px]" viewBox="0 0 512 512"><path d="M233.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L256 338.7 86.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z"/></svg>
 				</span>
@@ -181,7 +181,7 @@ layout: "layouts/base.html"
 				<span class="text-black text-xl md:text-2xl font-bold block pl-3.5 md:pl-3">Lipo injections</span>
 			</div>
 			<div class="flex items-center">
-				<a href="/" class="text-[#c1c1c1] text-lg/[42px] underline hidden md:block pr-[18px]">Bekijk behandelingen</a>
+				<a href="/" class="text-[#c1c1c1] text-lg underline hidden md:block pr-[18px]">Bekijk behandelingen</a>
 				<span class="shrink-0">
 					<svg xmlns="http://www.w3.org/2000/svg" fill="#f70766" class="h-[18px]" viewBox="0 0 512 512"><path d="M233.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L256 338.7 86.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z"/></svg>
 				</span>
